chgmgmt_build/src/objects/JobProfile__c.object
<CustomObject>
    <description>・各ポジションの役割と職責の職務記述書の作成</description>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>承認ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>未承認</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>申請済</fullName>
                </value>
                <value>
                    <fullName>承認済</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorizer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>承認者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Jobprofiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comp001__c</fullName>
        <label>コンピテンシー001</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Skilled</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Strategic Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comp002__c</fullName>
        <label>コンピテンシー002</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Skilled</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Strategic Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comp003__c</fullName>
        <label>コンピテンシー003</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Skilled</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Strategic Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>影響力で相手をリードする</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>チームワークで目的を達成する</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>お客様を最優先する</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobRank__c</fullName>
        <label>職位</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>本部長</fullName>
                </value>
                <value>
                    <fullName>ディレクター</fullName>
                </value>
                <value>
                    <fullName>マネージャー</fullName>
                </value>
                <value>
                    <fullName>チーフ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ジョブプロファイル</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>JobRank__c</columns>
        <columns>ApprovalStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべてのジョブプロファイル</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Chief_JobProfiles</fullName>
        <columns>NAME</columns>
        <columns>JobRank__c</columns>
        <columns>ApprovalStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>JobRank__c</field>
            <operation>equals</operation>
            <value>チーフ</value>
        </filters>
        <label>職位（チーフ）のジョブプロファイル</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>ジョブプロファイル名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>